Moved CUDA PETSc matrix creation routine from dolfinx to this repository.

--- a/cpp/cudolfinx/la/CMakeLists.txt
+++ b/cpp/cudolfinx/la/CMakeLists.txt
@@ -2,6 +2,7 @@ set(HEADERS_la
     ${CMAKE_CURRENT_SOURCE_DIR}/CUDAMatrix.h
     ${CMAKE_CURRENT_SOURCE_DIR}/CUDASeqMatrix.h
     ${CMAKE_CURRENT_SOURCE_DIR}/CUDAVector.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/petsc.h
     PARENT_SCOPE
 )
 
@@ -10,4 +11,5 @@ target_sources(
   PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/CUDAMatrix.cpp
           ${CMAKE_CURRENT_SOURCE_DIR}/CUDASeqMatrix.cpp
           ${CMAKE_CURRENT_SOURCE_DIR}/CUDAVector.cpp
+          ${CMAKE_CURRENT_SOURCE_DIR}/petsc.cpp
 )
