--- a/cpp/cudolfinx/fem/CMakeLists.txt
+++ b/cpp/cudolfinx/fem/CMakeLists.txt
@@ -7,6 +7,7 @@ set(HEADERS_fem
     ${CMAKE_CURRENT_SOURCE_DIR}/CUDAFormConstants.h
     ${CMAKE_CURRENT_SOURCE_DIR}/CUDAFormCoefficients.h
     ${CMAKE_CURRENT_SOURCE_DIR}/CUDAFormIntegral.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/petsc.h
     PARENT_SCOPE
 )
 
