Added ghost layer mesh.

--- a/cpp/cudolfinx/mesh/CMakeLists.txt
+++ b/cpp/cudolfinx/mesh/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(HEADERS_mesh
     ${CMAKE_CURRENT_SOURCE_DIR}/CUDAMesh.h
     ${CMAKE_CURRENT_SOURCE_DIR}/CUDAMeshEntities.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/util.h
     PARENT_SCOPE
 )
 
