--- a/cpp/cudolfinx/fem/CMakeLists.txt
+++ b/cpp/cudolfinx/fem/CMakeLists.txt
@@ -7,6 +7,7 @@ set(HEADERS_fem
     ${CMAKE_CURRENT_SOURCE_DIR}/CUDAFormConstants.h
     ${CMAKE_CURRENT_SOURCE_DIR}/CUDAFormCoefficients.h
     ${CMAKE_CURRENT_SOURCE_DIR}/CUDAFormIntegral.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/CUDAInterpolate.h
     ${CMAKE_CURRENT_SOURCE_DIR}/petsc.h
     ${CMAKE_CURRENT_SOURCE_DIR}/utils.h
     PARENT_SCOPE
@@ -16,5 +17,6 @@ target_sources(
   cudolfinx
   PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/CUDAAssembler.cpp
           ${CMAKE_CURRENT_SOURCE_DIR}/CUDADofMap.cpp
-	  ${CMAKE_CURRENT_SOURCE_DIR}/CUDAFormIntegral.cpp
+          ${CMAKE_CURRENT_SOURCE_DIR}/CUDAFormIntegral.cpp
+          ${CMAKE_CURRENT_SOURCE_DIR}/CUDAInterpolate.cu
 )
